--- a/classb/index.html
+++ b/classb/index.html
@@ -31,8 +31,8 @@
 								</div>
 									<nav id="nav">
 										<div class="list">
-											<a href="./">CLASS A</a>
-											<a href="./classb/">CLASS B</a>
+											<a href="../">CLASS A</a>
+											<a href="./">CLASS B</a>
 										</div>
 										<div class="btn-wrapper">
 											<a href="https://meridianbet.com.cy/measures">EN</a>
